fix-css-add-shift-key

--- a/src/components/ContentRoom.css
+++ b/src/components/ContentRoom.css
@@ -58,6 +58,7 @@
 .Show-Message{
   margin: 0;
   display: flex;
+  flex-direction: column;
   color: #adecee;
 }
 /*start code scrollbar*/
